--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
     <picture>
         <source srcset="images/banner480.jpg" media="(max-width: 480px)">
-        <source srcset="images/banner960.jpg" media="(max-width: 960px)">
-        <img srcset="images/banner.jpg" alt="banner">
+        <source srcset="images/banner960.jpg" media="(max-width: 768px)">
+        <img srcset="images/banner.jpg" alt="banner" class="banner">
     </picture> 
     <main class="wrapper">
         <section id="selling-points">
